--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -134,7 +134,7 @@
             </form>
         </div>
 
-        <div class="wittlist-empty" ng-if="items == []" ng-cloak>
+        <div class="wittlist-empty" ng-if="items.length == 0" ng-cloak>
             <i class="illustration icon_documents_alt"></i>
             <h3 class="message">
                 Your wittlist is looking rather empty <span class="smiley">:(</span>
