Pushed overcrowding fix

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1288,6 +1288,7 @@ body.modal-open {
 
   .wittl-clause {
     margin: 5px -10px;
+    margin-right: 2px;
     padding: 5px 10px;
     border-radius: 3px;
     display: inline-block;
