--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -230,35 +230,5 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.runtime.min.js"></script>
-    <script src="/static/web/js/handlebars_helpers.js" type="text/javascript"></script>
-
-    <script type="text/javascript" src="/static/web/js/templates.js"></script>
-
-    <script type="text/javascript" src="/static/web/js/vendor/modernizr.custom.min.js"></script>
-
-    <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
-    <script type="text/javascript"
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgcL0rohxn0A99lQMRJ8WcN17NT_x9mf0&sensor=true"></script>
-
-    <script type="text/javascript" src="/static/web/js/vendor/ladda/spin.min.js"></script>
-    <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.min.js"></script>
-    <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
-    <script type="text/javascript" src="/static/web/js/vendor/nanobar.js"></script>
-
-    <script src="/static/web/js/vendor/angular/angular.js"></script>
-    <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
-    <script src="/static/web/js/vendor/angular/angular-cookies.js"></script>
-    <script src="/static/web/js/vendor/angular/angular-isotope.min.js"></script>
-    <script src="/static/web/js/vendor/angular/angular-nanobar.js"></script>
-    <script src="/static/web/js/vendor/angular/angular-sortable.js"></script>
-
-    <script src="/static/web/js/wittl/filters.js"></script>
-    <script src="/static/web/js/wittl/directives.js"></script>
-    <script src="/static/web/js/wittl/controllers.js"></script>
-    <script src="/static/web/js/wittl/services.js"></script>
-    <script src="/static/web/js/wittl/app.js"></script>
-
-    <!-- <script type="text/javascript" src="/static/web/js/vendor/nlform.js"></script> -->
+    {% include 'js_dependencies.html' %}
 {% endblock %}
