--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,6 +22,7 @@
         <title>wittl</title>
 
         <!-- Stylesheets -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,500,600,700,400italic|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
         <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
         <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
 
@@ -72,35 +73,50 @@
                     <li><a href="#">About</a></li>
 			        <li><a href="#">Popular</a></li>
 			      </ul>
+
+                  <ul class="login pull-right">
+                    <li><a class="login-btn" href="{% url 'login' %}">Login</a></li>
+                    <li><a class="login-btn" href="{% url 'register' %}">Register</a></li>
+                  </ul>
 			    </div><!-- /.navbar-collapse -->
 			  </div><!-- /.container-fluid -->
 			</nav>
 
-       		<section class="hero">
-                <header>
-                    <h1>wittl</h1>
+       		<section class="hero" style="background-color: #3F4249">
+                <div class="wrap">
+                    <img src="/static/web/images/logo.png" />
                     <h2>Reach better decisions, faster</h2>
-                </header>
+                </div>
        		</section>
 
             <section class="content">
-                <div class="container">
+                <div class="container-fluid">
 
-                    <div class="strip">
+                    <div class="strip row">
                         <header class="main-header col-xs-6 col-xs-offset-3">
-                            <h1>What's a wittl?</h1>
+                            <h1>What's wittlin'?</h1>
                         </header>
                     </div>
 
-                    <div class="col-xs-4">
-                        <h3>Subtitle</h3>
-                        <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                    <div class="row">
+                        <div class="container">
 
-                        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                            <div class="col-sm-6 col-sm-offset-3">
+                                <h4>Tagline that's awesome here</h4>
+                            </div>
 
-                        <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                            <div class="col-xs-4">
+                                <h3>Subtitle</h3>
+                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
 
-                        <p>Penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+
+                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+
+                                <p>Penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                            </div>
+
+                        </div>
                     </div>
 
                 </div>
