--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -38,7 +38,7 @@
     <div class="col-sm-4">
         <div class="profile-wrapper">
             <div class="profile-pic">
-                <img src="/static/web/images/liam.jpg"/>
+                <img src="{{ user.gravatar_url }}"/>
             </div>
             <div class="user-details">
                 <h3 class="username">
