Added drop down to select users

--- a/web/templates/js_dependencies.html
+++ b/web/templates/js_dependencies.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.min.js"></script>
 <script type="text/javascript" src="/static/web/js/vendor/ladda/ladda.jquery.min.js"></script>
 <script type="text/javascript" src="/static/web/js/vendor/nanobar.js"></script>
+<script type="text/javascript" src="/static/web/js/vendor/selectize/js/standalone/selectize.min.js"></script>
 
 <script src="/static/web/js/vendor/angular/angular.js"></script>
 <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
@@ -21,6 +22,7 @@
 <script src="/static/web/js/vendor/angular/angular-isotope.min.js"></script>
 <script src="/static/web/js/vendor/angular/angular-nanobar.js"></script>
 <script src="/static/web/js/vendor/angular/angular-sortable.js"></script>
+<script src="/static/web/js/vendor/angular/angular-selectize.js"></script>
 
 <script src="/static/web/js/wittl/filters.js"></script>
 <script src="/static/web/js/wittl/directives.js"></script>
@@ -29,6 +31,7 @@
 <script src="/static/web/js/wittl/controllers/listsController.js"></script>
 <script src="/static/web/js/wittl/controllers/listItemController.js"></script>
 <script src="/static/web/js/wittl/controllers/favouritesController.js"></script>
+<script src="/static/web/js/wittl/controllers/userInviteController.js"></script>
 
 <script src="/static/web/js/wittl/services.js"></script>
 <script src="/static/web/js/wittl/app.js"></script>
