--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,7 +22,7 @@
         <title>wittl</title>
 
         <!-- Stylesheets -->
-        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,500,600,700,400italic|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:100,300,400,500,600,700,400italic|Lato:300,400,600|Roboto:400,300,400italic,500,700' rel='stylesheet' type='text/css'/>
         <link href="/static/web/css/vendor/eleganticons.css" rel="stylesheet"/>
         <link href="/static/web/css/vendor/animate.css" rel="stylesheet"/>
 
@@ -82,10 +82,10 @@
 			  </div><!-- /.container-fluid -->
 			</nav>
 
-       		<section class="hero" style="background-color: #3F4249">
+       		<section class="hero">
                 <div class="wrap">
                     <img src="/static/web/images/logo.png" />
-                    <h2>Reach better decisions, faster</h2>
+                    <h2>Reach <em>better</em> decisions <strong><em>faster</em></strong></h2>
                 </div>
        		</section>
 
@@ -95,29 +95,40 @@
                     <div class="strip row">
                         <header class="main-header col-xs-6 col-xs-offset-3">
                             <h1>What's wittlin'?</h1>
+                            
+                            <div class="signup-wrap">
+                                <a href="{% url 'register' %}" id="signup">Sign Up</a>                        
+                            </div>
+                            
+                            <div class="tagline col-sm-6 col-sm-offset-3">
+                                <h4>You haven't heard of it yet?!<br />That's okay. Now you have.</h4>
+                            </div>
                         </header>
                     </div>
 
                     <div class="row">
+                    </div>
+
+                    <!-- <div class="row">
                         <div class="container">
 
-                            <div class="col-sm-6 col-sm-offset-3">
-                                <h4>Tagline that's awesome here</h4>
+                            <div class="col-xs-4">
+                                <h3>Collect</h3>
+                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
                             </div>
 
                             <div class="col-xs-4">
-                                <h3>Subtitle</h3>
+                                <h3>Wittl</h3>
                                 <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                            </div>
 
-                                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-
-                                <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-
-                                <p>Penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                            <div class="col-xs-4">
+                                <h3>Decide</h3>
+                                <p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
                             </div>
 
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
@@ -132,7 +143,6 @@
         <script>window.jQuery || document.write('<script src="/static/web/js/vendor/jquery.min.js"><\/script>')</script>
         <script src="/static/web/js/vendor/bootstrap.js"></script>
         <script src="/static/web/js/vendor/isotope.pkgd.js"></script>
-        <script src="/static/web/js/main.js"></script>
         {% block javascript %}
         {% endblock %}
     </body>
